# neural_ca_cpp

./: .ppm2png.py  CMakeLists.txt  README.en.md  README.md  build_wasm_ca.sh  dora_target.raw  grown.ppm  healed.ppm  nca.cpp  preview.ppm  wasm_ca.cpp
wasmdist/: ca.wasm  index.html
wasmdist_dora/: ca.js  ca.wasm  index.html
