cmake_minimum_required(VERSION 3.15)
project(neural_ca CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(nca nca.cpp autograd.cpp)
if (MSVC)
  target_compile_options(nca PRIVATE /O2 /arch:AVX2 /fp:fast /utf-8)
else()
  target_compile_options(nca PRIVATE -O3 -march=native)
endif()
